スマホ画面対応2

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
     </select>
 
     <label for="game">打ち出しゲーム数</label>
-    <input type="number" id="game" name="game" min="0" value="{{input_game}}" required inputmode="numeric" pattern="[0-9]*"> /* 追加！ */
+    <input type="number" id="game" name="game" min="0" value="{{input_game}}" required inputmode="numeric" pattern="[0-9]*">
 
     <label for="through">スルー回数</label>
     <select name="through_display" id="through" required>
