--- a/templates/index.html
+++ b/templates/index.html
@@ -544,7 +544,20 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 </script>
 
+<script>
+  document.getElementById("myForm").addEventListener("submit", function () {
+    const scrollY = window.scrollY;
+    sessionStorage.setItem("scrollPosition", scrollY);
+  });
 
+  window.addEventListener("load", function () {
+    const savedY = sessionStorage.getItem("scrollPosition");
+    if (savedY !== null) {
+      window.scrollTo(0, parseInt(savedY));
+      sessionStorage.removeItem("scrollPosition");
+    }
+  });
+</script>
 
 </body>
 </html>
